  * mod_staticfile: add debug output if we ignore a file with static-file.exclude-extensions (fixes #2215)
  * mod_cgi: fix race condition leaving response not forwarded to client (fixes #2217)
  * mod_accesslog: Fix var declarations mixed in source (fixes #2233)
  * mod_status: Add version to status page (fixes #2219)

- 1.4.26 - 2010-02-07
  * Fix request parser to handle packets with splitted \r\n\r\n (fixes #2105)
  * Remove dependency on automake >= 1.11 with m4_ifdef check
  * mod_accesslog: support %e (fixes #2113, thx presbrey)
  * Fix mod_cgi cgi.execute-x-only option in global block
  * mod_fastcgi: x-sendfile2 parse error debugging
  * Fix mod_proxy dead host detection if connect() fails
  * Fix fd leaks in mod_cgi (fds not closed on pipe/fork failures, found by Rodrigo, fixes #2158, #2159)
  * Fix segfault with broken rewrite/redirect patterns (fixes #2140, found by crypt)
  * Append to previous buffer in con read, fix DoS/OOM vulnerability (fixes #2147, found by liming, CVE-2010-0295)
  * Fix HUP detection in close-state if event-backend doesn't support FDEVENT_HUP (like select or poll on FreeBSD)

- 1.4.25 - 2009-11-21
  * mod_magnet: fix pairs() for normal tables and strings (fixes #1307)
  * mod_magnet: add traceback for printing lua errors
  * mod_rewrite: fix compile error if compiled without pcre
  * disable warning "CLOSE-read" (fixes #2091)
  * mod_rrdtool: fix creating file if it doesn't exist (#1788)
  * reset tlsext_server_name in connection_reset - fixes random hostnames in the $HTTP["host"] conditional
  * export some SSL_CLIENT_* vars for client cert validation (fixes #1288, thx presbrey)
  * mod_fastcgi: fix mod_fastcgi packet parsing
  * mod_fastcgi: Don't reconnect after connect() succeeded (fixes #2096)
  * Fix configure.ac to allow autoreconf, also enables make V=0

- 1.4.24 - 2009-10-25
  * Add T_CONFIG_INT for bigger integers from the config (needed for #1966)
  * Use unsigned int (and T_CONFIG_INT) for max_request_size