@@ -22,6 +22,7 @@ NEWS
   * mod_cgi: fix race condition leaving response not forwarded to client (fixes #2217)
   * mod_accesslog: Fix var declarations mixed in source (fixes #2233)
   * mod_status: Add version to status page (fixes #2219)
+  * mod_accesslog: optimize accesslog_append_escaped (fixes #2236, thx crypt)
 
 - 1.4.26 - 2010-02-07
   * Fix request parser to handle packets with splitted \r\n\r\n (fixes #2105)
